# odfgrep

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  README.md  TODO  configure.ac  configure.in
man/: Makefile.am  odfgrep.1
src/: Makefile.am  action.cpp  action.hpp  odfgrep.cpp  okay  unicode.cpp  unicode.hpp  xml.cpp  xml.hpp  zip.cpp  zip.hpp
